--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "socket.io": "~0.9.16",
     "express": "~3.2.6",
     "jade": "~0.31.2",
-    "mongoose": "latest"
+    "mongoose": "latest",
+    "passport": "latest",
+    "passport-local": "latest"
   }
 }
