--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "node": "0.10.x",
-    "npm" : "1.2.x",
     "socket.io": "~0.9.16",
     "express": "~3.2.6",
     "jade": "~0.31.2",
@@ -14,5 +12,9 @@
     "passport-local": "latest",
     "mongodb" : "1.1.11",
     "connect-flash": "latest"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
   }
 }
